--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ subjects:
 - !lcsh 'Post-apocalyptic fiction'
 - !lcsh 'Short stories'
 - !lcsh 'Science fiction'
+- GITenberg
 title: The Moon is Green
 url: http://www.gutenberg.org/ebooks/29662
